Tweaking menu with accordion feature

--- a/themes/book2/layouts/partials/docs/inject/body.html
+++ b/themes/book2/layouts/partials/docs/inject/body.html
@@ -3,14 +3,23 @@
     var i;
 
     for (i = 0; i < coll.length; i++) {
-    coll[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var content = this.nextElementSibling;
-        if (content.style.maxHeight){
-        content.style.maxHeight = null;
-        } else {
-        content.style.maxHeight = content.scrollHeight + "px";
-        } 
-    });
+        coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.maxHeight){
+            content.style.maxHeight = null;
+            } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+            } 
+        });
+
+        var path = window.location.pathname;
+        const activeLink = document.querySelectorAll('a[href="'+window.location.pathname+'"]');
+        activeLink.forEach(function(a, index){
+            // a.style.background = 'gainsboro';
+            a.style.color = 'lightskyblue';
+            const contentList = a.parentElement.parentElement;
+            contentList.style.maxHeight = contentList.scrollHeight + "px";
+        });
     }
 </script>
