--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -16,6 +16,7 @@
         cursor: pointer;
         /* padding: 18px; */
         width: 100%;
+        font-weight: 600;
         /* border: none; */
         /* text-align: left; */
         /* outline: none; */
@@ -23,18 +24,11 @@
     }
     
     /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
-    .active, .collapsible:hover {
-        /* background-color: #ccc; */
-    }
+    /* .active, .collapsible:hover {
+        background-color: #ccc;
+    } */
     
     /* Style the collapsible content. Note: hidden by default */
-    /* .content {
-        padding: 0 18px;
-        display: none;
-        overflow: hidden;
-        background-color: #f1f1f1;
-    } */
-
     .menu-content {
         padding: 0 18px;
         background-color: white;
@@ -43,4 +37,20 @@
         transition: max-height 0.2s ease-out;
     }
 
+    .collapsible {
+        position: relative;
+    }
+
+    .collapsible:before {
+        content: "";
+        position: absolute;
+        right: 10px;
+        top: 8px;
+        width: 0; 
+        height: 0; 
+        border-left: 5px solid transparent;
+        border-right: 5px solid transparent;
+        border-top: 6px solid #bbb;
+        /* border-top: 10px solid #f00; */
+    }
 </style>
