--- a/themes/book2/layouts/docs/baseof.html
+++ b/themes/book2/layouts/docs/baseof.html
@@ -8,18 +8,19 @@
 </head>
 
 <body>
+  <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
   <input type="checkbox" style="display: none" id="menu-control" />
   <main>
 
-    <aside class="menu fixed">
+    <aside class="menu">
       <nav role="navigation">
         {{ partial "docs/brand" . }}
         {{ partial "docs/inject/menu-before" . }}
 
         {{ if .Site.Params.BookMenuBundle }}
-          {{ partial "docs/menu-bundle" . }}
+        {{ partial "docs/menu-bundle" . }}
         {{ else }}
-          {{ partial "docs/menu-filetree" . }}
+        {{ partial "docs/menu-filetree" . }}
         {{ end }}
 
         {{ partial "docs/inject/menu-after" . }}
