--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -22,12 +22,12 @@
         /* outline: none; */
         /* font-size: 15px; */
     }
-    
+
     /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
     /* .active, .collapsible:hover {
         background-color: #ccc;
     } */
-    
+
     /* Style the collapsible content. Note: hidden by default */
     .menu-content {
         padding: 0 18px;
@@ -46,8 +46,8 @@
         position: absolute;
         right: 10px;
         top: 8px;
-        width: 0; 
-        height: 0; 
+        width: 0;
+        height: 0;
         border-left: 5px solid transparent;
         border-right: 5px solid transparent;
         border-top: 6px solid #bbb;
@@ -61,17 +61,37 @@
 
     /* Track */
     ::-webkit-scrollbar-track {
-        background: #f1f1f1; 
+        background: #f1f1f1;
     }
-    
+
     /* Handle */
     ::-webkit-scrollbar-thumb {
-        background: #aaa; 
+        background: #aaa;
     }
 
     /* Handle on hover */
     ::-webkit-scrollbar-thumb:hover {
-        background: #777; 
+        background: #777;
     }
 
+
+    #topBtn {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 50px;
+        z-index: 99;
+        font-size: 14px;
+        border: none;
+        outline: none;
+        background-color: dodgerblue;
+        color: white;
+        cursor: pointer;
+        padding: 7px;
+        border-radius: 4px;
+    }
+
+    #topBtn:hover {
+        background-color: #555;
+    }
 </style>
