--- a/themes/book2/layouts/docs/baseof.html
+++ b/themes/book2/layouts/docs/baseof.html
@@ -32,6 +32,8 @@
         {{ partial "docs/mobile-header" . }}
       </header>
       <article class="markdown">
+        {{ .TableOfContents }}
+
         {{- .Content -}}
       </article>
     </div>
