--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -94,4 +94,13 @@
     #topBtn:hover {
         background-color: #555;
     }
+
+    #toc{
+        font-size: 0.75em;
+        line-height: 1.5em;
+        margin: 0px;
+        margin-top: 5px;
+        /* position: fixed; */
+    }
+
 </style>
