home page updated

--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -103,4 +103,32 @@
         /* position: fixed; */
     }
 
+    table td{
+        vertical-align: top;
+    }
+
+    .noborder tr th, .noborder tr td{
+        border: 0px solid grey !important;
+    }
+
+
+    .home-page {
+        color: white;
+    }
+
+    .home-page a {
+        color: cadetblue;
+    }
+
+    .home-page a:hover {
+        color: blue;
+    }
+
+    .home-page h3 a {
+        color: deepskyblue;
+    }
+
+    .home-page h1 {
+        color: navy;
+    }
 </style>
