--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -117,18 +117,37 @@
     }
 
     .home-page a {
-        color: cadetblue;
+        color: steelblue;
     }
 
     .home-page a:hover {
         color: blue;
     }
 
-    .home-page h3 a {
-        color: deepskyblue;
+    .home-page h3 a, .home-page h3 a:visited {
+        color: black;
     }
 
-    .home-page h1 {
-        color: navy;
+    h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+        color: steelblue;
+        font-weight: 300;
     }
+    
+    h1 a:visited, h2 a:visited, h3 a:visited, h4 a:visited, h5 a:visited, h6 a:visited {
+        color: steelblue;
+    }
+
+    a:hover {
+        text-decoration: none !important;
+    } 
+
+    .toc a, .toc a:visited {
+        color: steelblue;
+    }
+
+    .toc a:hover {
+        color: orangered;
+    }
+
+
 </style>
