--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -111,6 +111,9 @@
         border: 0px solid grey !important;
     }
 
+    .noborder .content{
+        padding-top: 15px;
+    }
 
     .home-page {
         color: white;
@@ -126,6 +129,12 @@
 
     .home-page h3 a, .home-page h3 a:visited {
         color: black;
+    }
+
+    .home-page h3 {
+        margin-top: 30px;
+        padding-bottom: 5px;
+        border-bottom: 1px solid lightgray;
     }
 
     h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
