--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -95,7 +95,7 @@
         background-color: #555;
     }
 
-    #toc{
+    #toc {
         font-size: 0.75em;
         line-height: 1.5em;
         margin: 0px;
@@ -103,16 +103,17 @@
         /* position: fixed; */
     }
 
-    table td{
+    table td {
         vertical-align: top;
     }
 
-    .noborder tr th, .noborder tr td{
+    .noborder tr th,
+    .noborder tr td {
         border: 0px solid grey !important;
     }
 
-    .noborder .content{
-        padding-top: 15px;
+    .noborder .content {
+        padding-top: 5px;
     }
 
     .home-page {
@@ -127,7 +128,8 @@
         color: blue;
     }
 
-    .home-page h3 a, .home-page h3 a:visited {
+    .home-page h3 a,
+    .home-page h3 a:visited {
         color: black;
     }
 
@@ -137,20 +139,31 @@
         border-bottom: 1px solid lightgray;
     }
 
-    h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+    h1 a,
+    h2 a,
+    h3 a,
+    h4 a,
+    h5 a,
+    h6 a {
         color: steelblue;
         font-weight: 300;
     }
-    
-    h1 a:visited, h2 a:visited, h3 a:visited, h4 a:visited, h5 a:visited, h6 a:visited {
+
+    h1 a:visited,
+    h2 a:visited,
+    h3 a:visited,
+    h4 a:visited,
+    h5 a:visited,
+    h6 a:visited {
         color: steelblue;
     }
 
     a:hover {
         text-decoration: none !important;
-    } 
+    }
 
-    .toc a, .toc a:visited {
+    .toc a,
+    .toc a:visited {
         color: steelblue;
     }
 
@@ -158,5 +171,9 @@
         color: orangered;
     }
 
-
+    .content .content {
+        padding-top: 0px;
+        padding-bottom: 5px;
+        min-width: 30rem;
+    }
 </style>
