--- a/themes/book2/layouts/partials/docs/inject/body.html
+++ b/themes/book2/layouts/partials/docs/inject/body.html
@@ -19,7 +19,7 @@
     );
     activeLink.forEach(function(a, index) {
       // a.style.background = 'gainsboro';
-      a.style.color = "lightskyblue";
+      a.style.color = "indianred";
       const contentList = a.parentElement.parentElement;
       contentList.style.maxHeight = contentList.scrollHeight + "px";
     });
