Swift basic, datastructures

--- a/themes/book2/layouts/partials/docs/html-head.html
+++ b/themes/book2/layouts/partials/docs/html-head.html
@@ -95,14 +95,6 @@
         background-color: #B83227;
     }
 
-    #toc {
-        font-size: 0.75em;
-        line-height: 1.5em;
-        margin: 0px;
-        margin-top: 5px;
-        /* position: fixed; */
-    }
-
     table td {
         vertical-align: top;
     }
@@ -150,7 +142,7 @@
     h5 a:visited,
     h6 a:visited {
         color: #AE1438;
-        font-weight: 200;
+        font-weight: 600;
     }
 
     h1 a,
@@ -165,9 +157,31 @@
         text-decoration: none !important;
     }
 
-    .toc a,
-    .toc a:visited {
-        color: slateblue;
+    #toc {
+        font-size: 0.75em;
+        line-height: 1.5em;
+        margin: 0px;
+        margin-top: 5px;
+        /* position: fixed; */
+    }
+
+    .toc li, .toc li li {
+        line-height: 17px;
+    }
+
+    .toc li a,
+    .toc li a:visited {
+        color: black;
+    }
+
+    .toc li li a,
+    .toc li li a:visited {
+        color: darkcyan;
+    }
+
+    .toc li li li a,
+    .toc li li li a:visited {
+        color: gray;
     }
 
     .toc a:hover {
@@ -193,5 +207,9 @@
         /* border-bottom: 2px solid whitesmoke; */
         border-bottom: 1px solid #eaecef;
         padding-bottom: .3em;
+    }
+
+    dt {
+        color: chocolate;
     }
 </style>
