--- a/themes/book2/layouts/partials/docs/toc.html
+++ b/themes/book2/layouts/partials/docs/toc.html
@@ -1,2 +1,4 @@
 <!-- {{ .Page.TableOfContents }} -->
-<nav id="toc"></nav>
+<nav id="toc">
+    <div onclick="topFunction()">Table of Contents:</div>
+</nav>
